update docker link

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -66,7 +66,7 @@
               <ul class="dropdown-menu" role="menu">
                 <li><a href="https://github.com/alerta/alerta-cloudformation" onclick="ga('send', 'event', 'Outbound Link', 'AWS', event.target.href)">AWS Cloudformation</a></li>
                 <li><a href="https://github.com/alerta/gcloud-api-alerta" onclick="ga('send', 'event', 'Outbound Link', 'GCP', event.target.href)">Google Cloud</a></li>
-                <li><a href="https://registry.hub.docker.com/u/alerta/alerta-web/" onclick="ga('send', 'event', 'Outbound Link', 'Docker', event.target.href)">Docker</a></li>
+                <li><a href="https://registry.hub.docker.com/r/alerta/alerta-web" onclick="ga('send', 'event', 'Outbound Link', 'Docker', event.target.href)">Docker</a></li>
                 <li><a href="https://github.com/alerta/packer-templates" onclick="ga('send', 'event', 'Outbound Link', 'Packer', event.target.href)">Packer</a></li>
                 <li><a href="https://github.com/alerta/heroku-api-alerta" onclick="ga('send', 'event', 'Outbound Link', 'Heroku', event.target.href)">Heroku</a></li>
                 <li><a href="https://pypi.python.org/pypi/alerta-server" onclick="ga('send', 'event', 'Outbound Link', 'PyPI', event.target.href)">Python PyPI</a></li>
